--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -11,5 +11,9 @@
     <script type="text/javascript" src="spatial.js"></script>
 </head>
 <body>
-    <div id="viewDiv"></div>
+    <div id="viewDiv">
+		<div id="draw-polygon" class="esri-widget--button esri-widget esri-interactive" title="Draw and measure polygon">
+      		<span class="esri-icon-polygon"></span>
+    	</div>
+	</div>
 </body>
