--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Intro to MapView - Create a 2D map</title>
+    <title>SAP HANA XSA Geosptail Demo with Python</title>
 
     <link rel="stylesheet" href="https://js.arcgis.com/4.8/esri/css/main.css">
     <link rel="stylesheet" href="spatial.css">
