points animation on search and click

--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -13,14 +13,15 @@
 </head>
 <body>
     <div id="viewDiv">
-		<div id="draw-polygon" class="esri-widget--button esri-widget esri-interactive" title="Draw and measure polygon">
+        <div id="draw-polygon" class="esri-widget--button esri-widget esri-interactive" 
+            title="Draw and measure polygon">
       		<span class="esri-icon-polygon"></span>
-    	</div>
+        </div>
     </div>
     <div id="panel">
-        <form id="searchArea"> 
-            <input id="searchField" name="searchInput" type="text" placeholder='Travel Agency'>
-            <input id="searchSubmit" type="submit" value="Search">
-        </form>
+        <div id="searchArea"> 
+            <input id="searchField" type="search" placeholder='Travel Agency'>
+            <input id="searchSubmit" type="button" value="Search">
+        </div>
     </div>
 </body>
