connect with HANA

--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -23,5 +23,6 @@
             <input id="searchField" type="search" placeholder='Travel Agency'>
             <input id="searchSubmit" type="button" value="Search">
         </div>
+        <button id="showTravelAgentsBtn">Show Travel Agencies</button>
     </div>
 </body>
