static clustering + web sockets + layers

--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -23,6 +23,9 @@
             <input id="searchField" type="search" placeholder='Travel Agency'>
             <input id="searchSubmit" type="button" value="Search">
         </div>
-        <button id="showTravelAgentsBtn">Show Travel Agencies</button>
+        <div id="controls">
+            <button id="showTravelAgentsBtn">Travel Agencies</button>
+            <button id="showClustersBtn">Clustered</button>
+        </div>
     </div>
 </body>
