--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -26,6 +26,8 @@
         <div id="controls">
             <button id="showTravelAgentsBtn">Travel Agencies</button>
             <button id="showClustersBtn">Clustered</button>
+            <button id="showHeatMapBtn">Heat Map</button>
+            <button id="showAirportsBtn">Major Airports</button>
         </div>
     </div>
 </body>
