fix zoom in bug

--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -24,10 +24,12 @@
             <input id="searchSubmit" type="button" value="Search">
         </div>
         <div id="controls">
-            <button id="showTravelAgentsBtn">Travel Agencies</button>
-            <button id="showClustersBtn">Clustered</button>
-            <button id="showHeatMapBtn">Heat Map</button>
-            <button id="showAirportsBtn">Major Airports</button>
+            <button id="showTravelAgentsBtn" class="agencyBtn">Travel Agencies</button>
+            <button id="showAgencyClustersBtn" class="agencyBtn">Clustered</button>
+            <button id="showAgencyHeatMapBtn" class="agencyBtn">Heat Map</button>
+            <button id="showAirportsBtn" class="airportBtn">Major Airports</button>
+            <button id="showAirportClustersBtn" class="airportBtn">Clustered</button>
+            <button id="showAirportHeatMapBtn" class="airportBtn">Heat Map</button>
         </div>
     </div>
 </body>
