--- a/web/resources/spatial/spatial.html
+++ b/web/resources/spatial/spatial.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="https://js.arcgis.com/4.8/esri/css/main.css">
     <link rel="stylesheet" href="spatial.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+	<script>
+    var dojoConfig = {
+      has: {
+        "esri-featurelayer-webgl": 1
+      }
+    };
+  </script>
+
     <script src="https://js.arcgis.com/4.8/"></script>
     <script type="text/javascript" src="spatial.js"></script>
 </head>
